@@ -1,4 +1,5 @@
 * Tue Jul 18 2012 Shane Bradley <sbradley@redhat.com>- 2.12-0.0
+- RHEL6 does not have the class ParseError in elementtree so I now catch the exception and handle correctly.
 - Added a gluster plugin gluster.py and some libraries for the plugin.
 - Created a cluster storage report file for fs.sh and GFS/GFS2 filesystem summary info. Which includes lvm info.
 - Cleaned up the cluster service summary information.
